[ratings] fixed media querie to align with navbar

--- a/client/src/components/RatingPage/Rating.css
+++ b/client/src/components/RatingPage/Rating.css
@@ -197,7 +197,7 @@
 
 }
 
-@media (min-width: 650px) {
+@media (min-width: 600px) {
   .smallerphotosgrid {
     grid-gap: 6px;
   }  
